@@ -403,10 +403,9 @@ class ServiceCallSyncImpl extends ServiceCallImpl implements ServiceCallSync {
         String semParameter = sd.getServiceNode().attribute('semaphore-parameter')
         String parameterValue = semParameter ? currentParameters.get(semParameter) ?: '_NULL_' : null
 
-        Thread sqlThread = Thread.start('ClearSemaphore', {
-            ExecutionContextImpl threadEci = ecfi.getEci()
-            boolean beganTx = ecfi.transactionFacade.begin(null)
-            boolean authzDisabled = threadEci.artifactExecution.disableAuthz()
+        ExecutionContextImpl eci = ecfi.getEci()
+        ecfi.getTransactionFacade().runRequireNew(null, "Error in clear service semaphore", {
+            boolean authzDisabled = eci.artifactExecution.disableAuthz()
             try {
                 if (semParameter) {
                     ecfi.entity.makeValue("moqui.service.semaphore.ServiceParameterSemaphore")
@@ -416,12 +415,9 @@ class ServiceCallSyncImpl extends ServiceCallImpl implements ServiceCallSync {
                             .set('serviceName', getServiceName()).delete()
                 }
             } finally {
-                if (authzDisabled) threadEci.artifactExecution.enableAuthz()
-                ecfi.transactionFacade.commit(beganTx)
-                threadEci.destroy()
+                if (authzDisabled) eci.artifactExecution.enableAuthz()
             }
-        } )
-        sqlThread.join(10000)
+        })
     }
 
     protected void checkAddSemaphore(ExecutionContextFactoryImpl ecfi, Map<String, Object> currentParameters) {
@@ -438,10 +434,9 @@ class ServiceCallSyncImpl extends ServiceCallImpl implements ServiceCallSync {
         long currentTime = System.currentTimeMillis()
         String lockThreadName = Thread.currentThread().getName()
 
-        Thread sqlThread = Thread.start('CheckAddSemaphore', {
-            ExecutionContextImpl threadEci = ecfi.getEci()
-            boolean beganTx = ecfi.transactionFacade.begin(null)
-            boolean authzDisabled = threadEci.artifactExecution.disableAuthz()
+        ExecutionContextImpl eci = ecfi.getEci()
+        ecfi.getTransactionFacade().runRequireNew(null, "Error in check/add service semaphore", {
+            boolean authzDisabled = eci.artifactExecution.disableAuthz()
             try {
                 if (semParameter) {
                     EntityValue serviceSemaphore = ecfi.entity.find("moqui.service.semaphore.ServiceParameterSemaphore")
@@ -516,12 +511,9 @@ class ServiceCallSyncImpl extends ServiceCallImpl implements ServiceCallSync {
                             .set('lockTime', new Timestamp(currentTime)).create()
                 }
             } finally {
-                if (authzDisabled) threadEci.artifactExecution.enableAuthz()
-                ecfi.transactionFacade.commit(beganTx)
-                threadEci.destroy()
+                if (authzDisabled) eci.artifactExecution.enableAuthz()
             }
-        } )
-        sqlThread.join(10000)
+        })
     }
 
     protected Map<String, Object> runImplicitEntityAuto(Map<String, Object> currentParameters, ExecutionContextImpl eci) {
